[workspace]
members = [
  "thesia-native-backend",
  "thesia-wasm-renderer",
]
resolver = "2"

[workspace.package]
authors = [
  # Owner / Maintainer
  "Sytronik <sytronik210@gmail.com>",

  # Contributors
  "crackyachae <crackyache@gmail.com>",

  "KwonWonpyo <commi1106@naver.com>",
]
edition = "2024"
license-file = "../LICENSE"
version = "0.1.0"
repository = "https://github.com/Sytronik/thesia"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
atomic_float = "1.1.0"

[profile.dev]
lto = true
opt-level = 3

[profile.test]
lto = false
opt-level = 0

[profile.dev-debug]
inherits = "dev"
lto = false

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
