[workspace]
members = [
  "src-tauri",
  "thesia-wasm-renderer",
]
resolver = "2"

[workspace.package]
authors = [
  # Owner / Maintainer
  "Sytronik <sytronik210@gmail.com>",

  # Contributors
  "crackyachae <crackyache@gmail.com>",

  "KwonWonpyo <commi1106@naver.com>",
]
edition = "2024"
license-file = "../LICENSE"
repository = "https://github.com/Sytronik/thesia"
version = "0.1.0"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
atomic_float = "1.1.0"
parking_lot = "0.12.5"

[profile.dev]
lto = true
opt-level = 3

[profile.test]
lto = false
opt-level = 0

[profile.dev-debug]
inherits = "dev"
lto = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
