[workspace]
members = [
  "src-common",
  "src-tauri",
  "src-wasm",
]
resolver = "2"

[workspace.package]
authors = [
  # Owner / Maintainer
  "Sytronik <sytronik210@gmail.com>",

  # Contributors
  "crackyachae <crackyache@gmail.com>",

  "KwonWonpyo <commi1106@naver.com>",
]
edition = "2024"
license-file = "../LICENSE"
repository = "https://github.com/Sytronik/thesia"
version = "0.1.0"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
approx = "0.5.1"
atomic_float = "1.1.0"
itertools = "0.14.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
parking_lot = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 3

[profile.dev.package.thesia-wasm-module]
opt-level = 0

[profile.test]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
