[package]
authors = ["Sytronik <sytronik210@gmail.com>", "crackyachae <crackyache@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "thesia-marshalling"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "thesia_marshalling"

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
thesia-backend = {path = "backend"}
