[package]
authors = ["Sytronik <sytronik210@gmail.com>", "crackyachae <crackyache@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "thesia-node-binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "thesia_node_binding"

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.14.0"
rayon = "1.5.0"
thesia-backend = {path = "backend"}

[dependencies.neon]
version = "0.6.0"
# default-features = false
# features = ["default-panic-hook", "napi-runtime", "try-catch-api"]
