[package]
authors = {workspace = true}
description = "Thesia's common library"
edition = {workspace = true}
name = "thesia-common"
repository = {workspace = true}
version = {workspace = true}

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
ndarray = {workspace = true}
num-traits = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
approx = {workspace = true}
itertools = {workspace = true}
