[package]
name = "thesia-tauri"
version = {workspace = true}
description = "A Tauri App"
authors = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thesia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri-plugin-dialog = "2"
approx = "0.5.1"
atomic_float = {workspace = true}
bytemuck = "1.24.0"
chrono = "0.4.42"
# console-subscriber = "0.4.0"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
dashmap = {version = "6.1.0", features = ["inline"] }
dunce = "1.0.5"
ebur128 = "0.1.10"
fast_image_resize = "5.3.0"
identity-hash = "0.1.0"
itertools = "0.14.0"
log = "0.4.28"
memmap2 = "0.9.9"
ndarray = {version = "0.16.1", features = ["approx", "blas", "rayon"] }
ndarray-npy = "0.9.1"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
num_cpus = "1.17.0"
parking_lot = {workspace = true}
rayon = "1.11.0"
readonly = "0.2.13"
realfft = "3.5.0"
simple_logger = "5.1.0"
tempfile = "3.23.0"
tiny-skia = "0.11.4"
tokio = "1"
tokio-rayon = "2.1.0"

[dependencies.kittyaudio]
git = "https://github.com/Sytronik/kittyaudio.git"
rev = "549b6764da73724336b7539cf773b653c01d9420"

[dependencies.symphonia]
default-features = false
features = [
  "aac",
  "alac",
  "flac",
  "id3v2",
  "isomp4",
  "mp3",
  "ogg",
  "opt-simd",
  "pcm",
  "vorbis",
  "wav",
]
git = "https://github.com/pdeljanov/Symphonia.git"
rev = "2846716d4fa875e0428ffa638a0adabfacc676ca" # dev-0.6 branch

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = {version = "0.3.2"}
blas-src = {version = "0.14.0", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = {version = "0.14.0", features = ["openblas"] }
openblas-src = {version = "0.10.13", features = ["cblas", "static", "system"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = {version = "0.14.0", features = ["openblas"] }
openblas-src = {version = "0.10.13", features = ["cache", "cblas", "static"] }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = "0.1.48"

[dev-dependencies]
hound = "3.5.1"
ndarray-rand = "0.15.0"

