[package]
authors = { workspace = true }
description = "Thesia's backend"
edition = { workspace = true }
name = "thesia"
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["cdylib", "rlib", "staticlib"]
name = "thesia_lib"

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
# console-subscriber = "0.4.0"
anyhow = "1"
atomic_float = { workspace = true }
const_format = "0.2.35"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
dunce = "1.0.5"
ebur128 = "0.1.10"
identity-hash = "0.1.0"
itertools = { workspace = true }
log = "0.4"
ndarray = { workspace = true, features = ["approx", "blas", "rayon"] }
ndarray-stats = "0.7.0"
num-traits = { workspace = true }
num_cpus = "1.17.0"
parking_lot = { workspace = true }
rayon = "1.11.0"
readonly = "0.2.13"
realfft = "3.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"
tauri-plugin-devtools = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
thesia-common = { path = "../src-common" }
tokio = "1"
tokio-rayon = "2.1.0"

[dependencies.kittyaudio]
git = "https://github.com/Sytronik/kittyaudio.git"
rev = "549b6764da73724336b7539cf773b653c01d9420"

[dependencies.symphonia]
default-features = false
features = [
  "aac",
  "alac",
  "flac",
  "id3v2",
  "isomp4",
  "mp3",
  "ogg",
  "opt-simd",
  "pcm",
  "vorbis",
  "wav",
]
git = "https://github.com/pdeljanov/Symphonia.git"
rev = "2846716d4fa875e0428ffa638a0adabfacc676ca" # dev-0.6 branch

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = { version = "0.3.2" }
blas-src = { version = "0.14.0", features = ["accelerate"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.14.0", features = ["openblas"] }
openblas-src = { version = "0.10.13", features = ["cblas", "static", "system"] }
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.14.0", features = ["openblas"] }
openblas-src = { version = "0.10.13", features = ["cache", "cblas", "static"] }
tauri-plugin-single-instance = "2"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = "0.1.48"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
approx = { workspace = true }
hound = "3.5.1"
ndarray-rand = "0.16.0"
