[package]
authors = { workspace = true }
description = "Thesia's WASM module."
edition = { workspace = true }
license-file = { workspace = true }
name = "thesia-wasm-module"
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = { workspace = true }
chrono = "0.4.42"
num-traits = { workspace = true }
serde-wasm-bindgen = "0.6.5"
thesia-common = { path = "../src-common" }
wasm-bindgen = "0.2.105"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd", "-O4"]
