[package]
authors = {workspace = true}
description = "Thesia's waveform renderer module compiled to WASM."
edition = {workspace = true}
license-file = {workspace = true}
name = "thesia-wasm-renderer"
repository = {workspace = true}
version = {workspace = true}

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = {workspace = true}
js-sys = "0.3.82"
parking_lot = {workspace = true}
rayon = {workspace = true}
rubato = "0.16.2"
wasm-bindgen = "0.2.105"
wasm-bindgen-rayon = "1.3.0"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Path2d",
  "console",
]
version = "0.3.82"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = [
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-simd",
  "--enable-threads",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-simd",
  "--enable-threads",
  "-O4",
]

[profile.dev.package.thesia-wasm-renderer]
opt-level = 0
