[package]
authors = { workspace = true }
description = "Thesia's waveform renderer module compiled to WASM."
edition = { workspace = true }
license-file = { workspace = true }
name = "thesia-wasm-renderer"
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = { workspace = true }
atomic_float = { workspace = true }
chrono = "0.4.42"
fast_image_resize = "5.3.0"
js-sys = "0.3.82"
ndarray = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
rubato = "0.16.2"
serde-wasm-bindgen = "0.6.5"
thesia-common = { path = "../src-common" }
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Path2d",
  "console",
]
version = "0.3.82"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd", "-O4"]

[profile.dev.package.thesia-wasm-renderer]
opt-level = 0
