[package]
authors = ["Sytronik <sytronik210@gmail.com>", "crackyachae <crackyache@gmail.com>"]
edition = "2018"
name = "thesia-backend"
version = "0.0.0"

[lib]
name = "thesia_backend"

[dev-dependencies]
image = "0.23.12"

[dependencies]
approx = {version = "0.4.0", features = ["num-complex"]}
hound = "3.4.0"
ndarray = {version = "0.14.0", features = ["rayon", "approx"]}
num-traits = "0.2.14"
rayon = "1.5.0"
readonly = "0.2"
resize = "0.5.5"
rodio = "0.13.0"
rustfft = "4.1.0"
tiny-skia = "0.3.0"

[dependencies.ndarray-stats]
git = "https://github.com/rust-ndarray/ndarray-stats.git"
rev = "74a818026aca7c3ed40a3de09c779d225f3eef67"
